crates/toml/tests/snapshots/invalid/key/newline-06.stderr
TOML parse error at line 2, column 2
  |
2 | 1
  |  ^
key with no value, expected `=`

---
TOML parse error at line 1, column 6
  |
1 | key =
  |      ^
string values must be quoted, expected literal string
